# cheaters_quizbowl

./: .gitignore  Caddyfile  README.md  create_gold_rtvr_input.py  extract-sessions.py  extract-train.py  index.html  package.json  parse_data.ipynb  pyproject.toml  run_app.sh  server.py
app/: .env  .env.development.local  package-lock.json  package.json
app/public/: index.html
app/src/: AnswerForm.js  AnswerForm_multi.js  App.css  App.js  Buzzer.js  Dashboard.js  Dashboard_flex.js  Dashboard_preloaded.js  DocumentSearchBox.jsx  KeywordSearch.jsx  Login.js  Login_dummy.js  Navbar.jsx  QuestionDisplay.js  QuestionDisplayUntimed.js  Register.js  Searcher.js  Styles.js  flex_test.js  utils.js
backend/: annotation_session.py  create_tables.py  data_server.py  database.py  db_test.py  game_manager_generic.py  game_manager_qanta.py  game_manager_utils.py  populate.py  qanta.py  reset_tables.py  security.py  server.py  server_old.py  web.py
backend/helper_scripts/: add_playing_times.py  reset_tables.py
frontend/: package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.js  Context.jsx  Login.css  Login.js  Login_dummy.js  Styles.js  utils.js
question_data/: LICENSE
question_data/wiki/: 'Tis Pity She's a Whore.txt  1 (number).txt  1812 Overture.txt  2 (number).txt  3 (number).txt  4 (number).txt  5 (number).txt  7 (number).txt  A Bend in the River.txt  A Burial At Ornans.txt  A Doll's House.txt  A Farewell to Arms.txt  A Good Man Is Hard to Find (short story).txt  A Grain of Wheat.txt  A Handful of Dust.txt  A Hero of Our Time.txt  (+2314 more)
(+62 files in other folders)
