[tool.poetry]
name = "cheaters_quizbowl"
version = "0.1.0"
description = ""
authors = ["Andrew <amao1@umd.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.61.1"
sqlalchemy = "^1.3.19"
passlib = "^1.7.3"
python-multipart = "^0.0.5"
wikipedia = "^1.4.0"
pyjwt = "^1.7.1"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
